# my-ytl

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/: UAT-ALL.md
.planning/phases/01-inspectable-intake-job-setup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-subtitle-artifact-delivery/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-batch-recovery-automation-readiness/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/yt_subs/: __init__.py
src/yt_subs/domain/: __init__.py  models.py  policies.py  url.py
src/yt_subs/infrastructure/: __init__.py  preflight.py  yt_dlp_adapter.py
src/yt_subs/interfaces/: __init__.py  (+2 more)
tests/: test_batch_service.py  test_cli_batch.py  test_cli_download.py  test_cli_inspect.py  test_cli_preflight.py  test_domain_contracts.py  test_inspect_service.py  test_job_manifest.py  test_preflight.py  test_rerun_service.py  test_subtitle_contracts.py  test_subtitle_conversion.py  test_subtitle_downloader.py  test_subtitle_service.py  test_url_intake.py
(+8 files in other folders)
