[project]
name = "yt-subs"
version = "0.1.0"
description = "CLI-first YouTube subtitle inspection and download tooling."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic>=2.13.4,<3.0.0",
  "rich>=15.0.0,<16.0.0",
  "structlog>=25.5.0,<26.0.0",
  "typer>=0.25.1,<0.26.0",
  "webvtt-py>=0.5.1,<0.6.0",
  "yt-dlp==2026.3.17",
]

[project.scripts]
yt-subdl = "yt_subs.interfaces.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_subs"]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.15.12,<0.16.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
